tests/data/pl0/valid/feature_procedure_call_nested_levels.pl0
var x;
procedure outer;
  procedure inner;
  begin
    x := x + 1
  end;
begin
  call inner
end;
begin
  x := 0;
  call outer;
  ! x
end.
