tests/data/pl0/invalid/limit_levmax_exceeded.pl0
procedure p1;
  procedure p2;
    procedure p3;
      procedure p4;
      begin
      end;
    begin
      call p4
    end;
  begin
    call p3
  end;
begin
  call p2
end;
begin
  call p1
end.
